# prometheus-entity-sync

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dockerignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  docker.yml
crates/pes-core/: Cargo.toml
crates/pes-core/src/: lib.rs  types.rs
crates/pes-gateway/: Cargo.toml
crates/pes-gateway/src/: auth.rs  connection.rs  error.rs  lib.rs  server.rs
crates/pes-gateway/tests/: e2e_delta_propagation.rs  e2e_graceful_shutdown.rs  e2e_invalid_jwt.rs  e2e_write_authorization.rs
crates/pes-oplog/: Cargo.toml
crates/pes-oplog/benches/: append_throughput.rs
crates/pes-oplog/src/: error.rs  key.rs  lib.rs  store.rs
crates/pes-oplog/tests/: compaction.rs  concurrency.rs  crash_recovery.rs
crates/pes-protocol/: Cargo.toml
crates/pes-protocol/fuzz/: Cargo.toml
crates/pes-protocol/fuzz/fuzz_targets/: fuzz_decode_client.rs  fuzz_decode_server.rs
crates/pes-protocol/src/: codec.rs  error.rs  lib.rs  messages.rs
crates/pes-protocol/tests/: cross_lang_roundtrip.rs  forward_compat.rs  roundtrip.rs
crates/pes-protocol/tests/fixtures/cross_lang/: client_ack.hex  client_ping.hex  client_subscribe.hex  client_write.hex  server_error.hex  server_keepalive.hex  server_snapshot_begin.hex
crates/pes-router/: Cargo.toml
crates/pes-router/src/: error.rs  lib.rs  metrics.rs  router.rs
crates/pes-router/tests/: backpressure.rs  e2e_wal_routing.rs
crates/pes-rules/: Cargo.toml
crates/pes-rules/src/: assigner.rs  error.rs  lib.rs  parser.rs  template.rs  validator.rs
crates/pes-rules/tests/: assigner_matrix.rs  assigner_proptest.rs  fixtures.rs  schema.sql  trait_bounds.rs  uuid_column_integration.rs
crates/pes-rules/tests/fixtures/invalid/: 01_toml_syntax_error.toml  02_unterminated_string.toml  03_missing_parameter_query.toml  04_no_placeholder.toml  05_extra_placeholder.toml  06_wrong_placeholder_number.toml  07_undeclared_bucket_parameter_reference.toml  08_bucket_id_uppercase.toml  09_bucket_id_leading_digit.toml  10_bucket_id_invalid_char.toml
crates/pes-rules/tests/fixtures/valid/: 02_two_buckets.toml  03_no_description.toml  04_multiple_parameters.toml  05_no_parameters.toml  06_bucket_id_with_digits_and_hyphens.toml  07_repeated_placeholder_use.toml  08_default_version.toml  09_many_data_queries.toml  10_underscore_bucket_id.toml
crates/pes-sdk-rust/: Cargo.toml
crates/pes-sdk-rust/src/: lib.rs
crates/pes-server/: Cargo.toml
crates/pes-server/src/: broker.rs  config.rs  health.rs  main.rs  shutdown.rs
crates/pes-snapshot/: Cargo.toml
crates/pes-snapshot/src/: checksum.rs  lib.rs  stream.rs
crates/pes-snapshot/tests/: snapshot_integration.rs
docs/: sync-rules-reference.md
examples/docker-compose/: config.toml  docker-compose.yml  init-db.sql  sync-rules.toml
scripts/: load-test.js
