[package]
name = "pes-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
frf-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx.workspace = true

[dev-dependencies]
proptest.workspace = true
static_assertions = "1"
