[package]
name = "pes-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pes-core.workspace = true
pes-rules.workspace = true
pes-oplog.workspace = true
pes-snapshot.workspace = true
pes-protocol.workspace = true
frf-postgres-cdc.workspace = true
frf-crdt.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio-test.workspace = true
sqlx.workspace = true
