[package]
name = "pes-oplog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pes-core.workspace = true
frf-store-redb.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio-test.workspace = true
