[package]
name = "pes-oplog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pes-core.workspace = true
redb = { workspace = true }
rmp-serde.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true
async-stream = "0.3"
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
serde_json.workspace = true

[[bench]]
name = "append_throughput"
harness = false
