[package]
name = "pes-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pes-core.workspace = true
serde.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
