[package]
name = "pes-snapshot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pes-core.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio-test.workspace = true
