[package]
name = "pes-snapshot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pes-core.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx.workspace = true
xxhash-rust = { version = "0.8", features = ["xxh3"] }
async-stream = "0.3"
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
