[package]
name = "pes-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.pes-protocol]
path = ".."

[[bin]]
name = "fuzz_decode_server"
path = "fuzz_targets/fuzz_decode_server.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decode_client"
path = "fuzz_targets/fuzz_decode_client.rs"
test = false
doc = false
bench = false
